# config/openapi.yml
@@ -19,6 +19,9 @@ tags:
   - name: greeting
     description: Greeting APIs
  
+  - name: user
+    description: User APIs
+ 
 paths:
   /hello:
     get:
@@ -57,6 +60,57 @@ paths:
               schema:
                 $ref: '#/components/schemas/HelloResponse'
  
+  /user:
+    post:
+      summary: Create User
+      tags:
+        - user
+      operationId: createUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: false
+              required:
+                - email
+                - password
+                - name
+              properties:
+                email:
+                  type: string
+                  format: email
+                password:
+                  type: string
+                name:
+                  type: string
+      responses:
+        201:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties: false
+                required:
+                  - userId
+                properties:
+                  userId:
+                    type: string
+        409:
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
+
 components:
   securitySchemes:
     bearerAuth:
@@ -71,4 +125,16 @@ components:
         - message
       properties:
         message:
+          type: string
+
+    FailResponse:
+      type: object
+      additionalProperties: false
+      required:
+        - success
+        - error
+      properties:
+        success:
+          type: boolean
+        error:
           type: string
