# src/api/services/user.ts
@@ -1,5 +1,9 @@
+import User from '@exmpl/api/models/user'
+import logger from '@exmpl/utils/logger'
+
 export type ErrorResponse = {error: {type: string, message: string}}
 export type AuthResponse = ErrorResponse | {userId: string}
+export type CreateUserResponse = ErrorResponse | {userId: string}
 
 function auth(bearerToken: string): Promise<AuthResponse> {
   return new Promise(function(resolve, reject) {
@@ -13,4 +17,22 @@ function auth(bearerToken: string): Promise<AuthResponse> {
   })
 }
 
-export default {auth: auth}
+function createUser(email: string, password: string, name: string): Promise<CreateUserResponse> {
+  return new Promise(function(resolve, reject) {
+    const user = new User({email: email, password: password, name: name})
+    user.save()
+      .then(u => {
+        resolve({userId: u._id.toString()})
+      })
+      .catch(err => {
+        if (err.code === 11000) {
+          resolve({error: {type: 'account_already_exists', message: `${email} already exists`}})
+        } else {
+          logger.error(`createUser: ${err}`)
+          reject(err)
+        }
+      })
+  })
+}
+
+export default {auth: auth, createUser: createUser}
